--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@reown-com/walletkit",
+  "name": "@reown/walletkit",
   "description": "WalletKit for WalletConnect Protocol",
   "version": "1.0.0",
   "private": false,
