--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "npmClient": "npm",
   "packages": [
-    "packages/*"
+    "packages/walletkit"
   ],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
