--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -37,9 +37,11 @@
     "@walletconnect/logger": "2.1.2",
     "@walletconnect/sign-client": "2.17.3",
     "@walletconnect/types": "2.17.3",
-    "@walletconnect/utils": "2.17.3"
+    "@walletconnect/utils": "2.17.3",
+    "brotli": "^1.3.3"
   },
   "devDependencies": {
-    "@ethersproject/wallet": "5.7.0"
+    "@ethersproject/wallet": "5.7.0",
+    "@types/brotli": "^1.3.3"
   }
 }
