refactor: WalletKit chain abstraction to use and expose yttrium types

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,7 @@
     "curly": "off",
     "prefer-promise-reject-errors": "off"
   },
-  "ignorePatterns": ["dist", "**/node_modules/*"],
+  "ignorePatterns": ["dist", "**/node_modules/*", "src/libs/yttrium/**"],
   "env": {
     "browser": true,
     "es6": true
