--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lerna": "7.1.4",
     "prettier": "3.4.2",
     "rollup": "2.78.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-esbuild": "4.9.3",
     "sinon": "14.0.0",
     "typescript": "4.7.4",
