--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "author": "Reown, Inc.",
   "homepage": "https://github.com/reown-com/",
-  "license": "WalletConnect Community License Agreement",
+  "license": "SEE LICENSE IN LICENSE.md",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "unpkg": "dist/index.umd.js",
