--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -10,6 +10,7 @@
   "module": "dist/index.js",
   "unpkg": "dist/index.umd.js",
   "types": "dist/types/index.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
@@ -32,19 +33,19 @@
     "build:pre": "npm run clean",
     "build:types": "tsc",
     "build:source": "rollup --config rollup.config.js",
-    "build": "npm run build:pre; npm run build:source; npm run build:types",
+    "build": "npm run lint; npm run build:pre; npm run build:source; npm run build:types",
     "test": "vitest run --dir test",
     "lint": "eslint -c '../../.eslintrc' --fix './src/**/*.ts'",
     "prettier": "prettier --check '{src,test}/**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
-    "@walletconnect/core": "2.22.0",
+    "@walletconnect/core": "2.22.3",
     "@walletconnect/jsonrpc-provider": "1.0.14",
     "@walletconnect/jsonrpc-utils": "1.0.8",
-    "@walletconnect/logger": "2.1.2",
-    "@walletconnect/sign-client": "2.22.0",
-    "@walletconnect/types": "2.22.0",
-    "@walletconnect/utils": "2.22.0"
+    "@walletconnect/logger": "3.0.0",
+    "@walletconnect/sign-client": "2.22.3",
+    "@walletconnect/types": "2.22.3",
+    "@walletconnect/utils": "2.22.3"
   },
   "devDependencies": {
     "@ethersproject/wallet": "5.7.0"
