--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -39,13 +39,13 @@
     "prettier": "prettier --check '{src,test}/**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
-    "@walletconnect/core": "2.21.10-canary-a-2",
+    "@walletconnect/core": "2.22.4-canary-auth-1",
     "@walletconnect/jsonrpc-provider": "1.0.14",
     "@walletconnect/jsonrpc-utils": "1.0.8",
-    "@walletconnect/logger": "2.1.2",
-    "@walletconnect/sign-client": "2.21.10-canary-a-2",
-    "@walletconnect/types": "2.21.10-canary-a-2",
-    "@walletconnect/utils": "2.21.10-canary-a-2"
+    "@walletconnect/logger": "3.0.0",
+    "@walletconnect/sign-client": "2.22.4-canary-auth-1",
+    "@walletconnect/types": "2.22.4-canary-auth-1",
+    "@walletconnect/utils": "2.22.4-canary-auth-1"
   },
   "devDependencies": {
     "@ethersproject/wallet": "5.7.0"
