--- a/packages/walletkit/package.json
+++ b/packages/walletkit/package.json
@@ -39,13 +39,14 @@
     "prettier": "prettier --check '{src,test}/**/*.{js,ts,jsx,tsx}'"
   },
   "dependencies": {
-    "@walletconnect/core": "2.23.0",
+    "@walletconnect/core": "2.23.3",
     "@walletconnect/jsonrpc-provider": "1.0.14",
     "@walletconnect/jsonrpc-utils": "1.0.8",
-    "@walletconnect/logger": "3.0.0",
-    "@walletconnect/sign-client": "2.23.0",
-    "@walletconnect/types": "2.23.0",
-    "@walletconnect/utils": "2.23.0"
+    "@walletconnect/logger": "3.0.2",
+    "@walletconnect/sign-client": "2.23.3",
+    "@walletconnect/types": "2.23.3",
+    "@walletconnect/utils": "2.23.3",
+    "@walletconnect/pay": "1.0.1-canary.1"
   },
   "devDependencies": {
     "ethers": "6.13.4"
